# restaurant-panel-admin

./: .gitignore  README.md  docker-compose.yml
web/: panel_admin.dockerfile  prestart.sh  pyproject.toml
web/alembic/: env.py
web/alembic/versions/: 1a397328776d_init_commit.py
web/app/: main.py  utils.py
web/app/api/: deps.py
web/app/core/: config.py
web/app/crud/: __init__.py  base.py  crud_alert.py  crud_beverage.py  crud_category.py  crud_cold_side.py  crud_combo.py  crud_dashboard.py  crud_dessert.py  crud_hot_side.py  crud_ingredient.py  crud_item.py  crud_option.py  crud_order.py  crud_printer.py  crud_request.py  crud_sauce.py  crud_setting.py  crud_special.py  crud_station.py  crud_user.py  crud_vendor.py
web/app/db/: base.py  base_class.py  init_db.py  session.py
web/app/models/: __init__.py  alert.py  beverage.py  category.py  cold_side.py  combo.py  combo_beverage.py  combo_cold_side.py  combo_dessert.py  combo_hot_side.py  combo_ingredient.py  combo_item.py  combo_option.py  combo_sauce.py  combo_station.py  dessert.py  hot_side.py  ingredient.py  item.py  item_cold_side.py  item_hot_side.py  item_ingredient.py  item_option.py  item_sauce.py  item_station.py  option.py  order.py  order_beverage.py  order_cold_side.py  order_combo.py  order_dessert.py  order_hot_side.py  order_item.py  order_sauce.py  order_station_beverage.py  order_station_cold_side.py  order_station_combo.py  order_station_dessert.py  order_station_hot_side.py  order_station_item.py  (+22 more)
web/app/schemas/: __init__.py  alert.py  beverage.py  category.py  (+25 more)
web/tests/: conftest.py
(+36 files in other folders)
