[tool.poetry]
name = "panel-admin"
version = "0.1.0"
description = ""
authors = ["Cosmos <cosmos>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
sqlalchemy = "^1.4.42"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.1.0"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
python-multipart = "^0.0.5"
twilio = "^7.15.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
